--- a/main.html
+++ b/main.html
@@ -3,13 +3,33 @@
 <html>
 
 <head>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 	<link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
+	<div class="container" style="width: 600px; border: 5px solid rgb(4, 255, 4); background-color: rgb(41, 0, 0); padding: 0;">
+        
+        <div class="row g-0" style="border: 5px solid rgb(255, 188, 188); height: 200px;">
+            <div class="col-6 col-md-4" style="border: 2px dotted rgb(38, 38, 43); background-color: teal;"></div>
+            <div class="col-6 col-md-8" style="border: 2px dotted rgb(38, 38, 43); background-color: thistle;"></div>
+        </div>
+
+        <div class="row g-0" style="border: 5px solid rgb(255, 188, 188); height: 200px;">
+            <div class="col-md-4 offset-md-2" style="border: 2px dotted rgb(38, 38, 43); background-color: tomato;"></div>
+            <div class="col-md-4" style="border: 2px dotted rgb(38, 38, 43); background-color: turquoise;"></div>
+        </div>
+
+        <div class="row g-0 justify-content-center" style="border: 5px solid rgb(255, 188, 188); height: 200px;">
+            <div class="col-4" style="border: 2px dotted rgb(38, 38, 43); background-color: violet;"></div>
+            <div class="col-4" style="border: 2px dotted rgb(38, 38, 43); background-color: yellowgreen;"></div>
+        </div>
+
+    </div>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 
 </body>
 
