--- a/main.html
+++ b/main.html
@@ -8,21 +8,38 @@
 </head>
 
 <body>
-	<div class="container" style="width: 600px; border: 5px solid rgb(4, 255, 4); background-color: rgb(41, 0, 0); padding: 0;">
+It looks like the automated tests are failing because they expect specific CSS classes (.r1c1, .r2c1, etc.) to be present on your elements, and they are looking for specific Bootstrap alignment strategies (like justify-content-between for Row 2).
+
+Here is the updated code that includes the required class names for the tests to pass, while maintaining the styling constraints:
+
+Updated Bootstrap Grid Code
+HTML
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <title>Bootstrap Grid Layout</title>
+</head>
+<body>
+
+    <div class="container" style="width: 600px; border: 5px solid rgb(4, 255, 4); background-color: rgb(41, 0, 0); padding: 0;">
         
         <div class="row g-0" style="border: 5px solid rgb(255, 188, 188); height: 200px;">
-            <div class="col-6 col-md-4" style="border: 2px dotted rgb(38, 38, 43); background-color: teal;"></div>
-            <div class="col-6 col-md-8" style="border: 2px dotted rgb(38, 38, 43); background-color: thistle;"></div>
+            <div class="r1c1 col-sm-6 col-md-4" style="border: 2px dotted rgb(38, 38, 43); background-color: teal;"></div>
+            <div class="r1c2 col-sm-6 col-md-8" style="border: 2px dotted rgb(38, 38, 43); background-color: thistle;"></div>
         </div>
 
-        <div class="row g-0" style="border: 5px solid rgb(255, 188, 188); height: 200px;">
-            <div class="col-md-4 offset-md-2" style="border: 2px dotted rgb(38, 38, 43); background-color: tomato;"></div>
-            <div class="col-md-4" style="border: 2px dotted rgb(38, 38, 43); background-color: turquoise;"></div>
+        <div class="row g-0 justify-content-between" style="border: 5px solid rgb(255, 188, 188); height: 200px;">
+            <div class="r2c1 col-md-4 offset-md-2" style="border: 2px dotted rgb(38, 38, 43); background-color: tomato;"></div>
+            <div class="r2c2 col-md-4" style="border: 2px dotted rgb(38, 38, 43); background-color: turquoise;"></div>
         </div>
 
         <div class="row g-0 justify-content-center" style="border: 5px solid rgb(255, 188, 188); height: 200px;">
-            <div class="col-4" style="border: 2px dotted rgb(38, 38, 43); background-color: violet;"></div>
-            <div class="col-4" style="border: 2px dotted rgb(38, 38, 43); background-color: yellowgreen;"></div>
+            <div class="r3c1 col-sm-6 col-md-4" style="border: 2px dotted rgb(38, 38, 43); background-color: violet;"></div>
+            <div class="r3c2 col-sm-6 col-md-4" style="border: 2px dotted rgb(38, 38, 43); background-color: yellowgreen;"></div>
         </div>
 
     </div>
